# project-50

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
.github/workflows/: github_actions.yaml
gendiff/: cli.py  construction_diff.py  generate_diff.py  parser.py
gendiff/formats/: __init__.py  json_defference.py  json_format.py  plain_format.py  stylish_format.py  templates.py
gendiff/scripts/: gendiff.py
tests/: generate_diff_test.py
tests/fixtures/: test1_file1.json  test1_file1.yaml  test1_file2.json  test2_file1.json  test3_file1.json  test3_file1.yaml  test3_file2.json  test3_file2.yaml  test_file2.yaml
tests/fixtures/results/: test1_result_plain.txt  test1_result_stylish.txt  test3_result.txt  test3_result_plain.txt  test3_result_stylish.txt
