[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["DimoonNazarov <nazarovdima39@mail.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
argparse3 = "^0.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
